@@ -32,8 +32,8 @@ bootJar {
 	archiveVersion = '0.0.1-SNAPSHOT'
 	// layered()
 }
-sourceCompatibility = JavaVersion.VERSION_17
-targetCompatibility = JavaVersion.VERSION_17
+sourceCompatibility = JavaVersion.VERSION_21
+targetCompatibility = JavaVersion.VERSION_21
 
 repositories {
 	mavenCentral()
@@ -78,9 +78,9 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
 	implementation 'org.springframework.amqp:spring-rabbit'
 	implementation 'net.logstash.logback:logstash-logback-encoder:7.3'
-	annotationProcessor('org.projectlombok:lombok:1.18.28')
-	testImplementation('org.projectlombok:lombok:1.18.28')
-	testAnnotationProcessor('org.projectlombok:lombok:1.18.28')
+	annotationProcessor('org.projectlombok:lombok:1.18.32')
+	testImplementation('org.projectlombok:lombok:1.18.32')
+	testAnnotationProcessor('org.projectlombok:lombok:1.18.32')
 	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.32'
 
 	testImplementation group: 'org.mockito', name: 'mockito-core', version: '5.5.0'
@@ -114,6 +114,10 @@ test {
 		destinationFile = file("$buildDir/jacoco/jacocoTest.exec")
 		classDumpDir = file("$buildDir/jacoco/classpathdumps")
 	}
+}
+
+test{
+	jvmArgs "-Dnet.bytebuddy.experimental=true"
 }
 
 jacocoTestReport {
